--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ verify_ssl = true
 django = "*"
 djangorestframework = "*"
 django-cors-headers = "*"
+telebot = "*"
+pytelegrambotapi = "*"
 
 [requires]
 python_version = "3.6"
